--- a/Counselling/.env
+++ b/Counselling/.env
@@ -1,2 +1,8 @@
 SECRET_KEY=django-insecure-21#@wwn+1ti3y=y4ys-w2hb4b$j_=+0l$wmn=c99%$--@6a4lr
 DATABASE_NAME=BASE_DIR / 'db.sqlite3'
+
+
+EMAIL_HOST= smtp.gmail.com
+EMAIL_HOST_USER= ugevoting1@ug.edu.gh
+EMAIL_HOST_PASSWORD= Legon@21
+RECIPIENT_ADDRESS=itservices@ug.edu.gh
